--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=${dbUrl}
+spring.datasource.username=${dbName}
+spring.datasource.password=${dbPass}
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
