--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=${dbName}
 spring.datasource.password=${dbPass}
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.default-property-inclusion=NON_NULL
